--- a/Paper/sigproc-2.bib
+++ b/Paper/sigproc-2.bib
@@ -237,8 +237,43 @@
  keywords = {emotional conflict, emotional congruence, human-robot interaction, story comprehension task},
 }
 
+@article{Brookings1996361,
+title = "Psychophysiological responses to changes in workload during simulated air traffic control ",
+journal = "Biological Psychology ",
+volume = "42",
+number = "3",
+pages = "361 - 377",
+year = "1996",
+note = "Psychophysiology of Workload ",
+issn = "0301-0511",
+doi = "http://dx.doi.org/10.1016/0301-0511(95)05167-8",
+url = "http://www.sciencedirect.com/science/article/pii/0301051195051678",
+author = "Jeffrey B. Brookings and Glenn F. Wilson and Carolyne R. Swain",
+keywords = "Cognitive workload",
+keywords = "Air traffic control",
+keywords = "EEG",
+keywords = "Heart rate",
+keywords = "Eye blinks",
+keywords = "Respiration "
+}
 
-
-
+@article{Roscoe1992259,
+title = "Assessing pilot workload. Why measure heart rate, \{HRV\} and respiration? ",
+journal = "Biological Psychology ",
+volume = "34",
+number = "2–3",
+pages = "259 - 287",
+year = "1992",
+note = "Special Issue Cardiorespiratory Measures and thier Role in Studies of Performance ",
+issn = "0301-0511",
+doi = "http://dx.doi.org/10.1016/0301-0511(92)90018-P",
+url = "http://www.sciencedirect.com/science/article/pii/030105119290018P",
+author = "A.H. Roscoe",
+keywords = "Flight",
+keywords = "heart rate",
+keywords = "respiration",
+keywords = "arousal",
+keywords = "methodology "
+}
 
 
