--- a/Paper/HRI-17.tex
+++ b/Paper/HRI-17.tex
@@ -589,7 +589,7 @@ Most important contribution of our model can has been demonstrated from the pers
 
 \begin{figure}
 \centering
-\includegraphics[scale=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto.eps}
+\includegraphics[width=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto.eps}
 \caption{"Test"}
 \label{fig:BoxWiskersTimeComp}
 \end{figure}
