--- a/Paper/HRI-17.tex
+++ b/Paper/HRI-17.tex
@@ -380,15 +380,6 @@ s = \frac{1}{Z}\sum_{i=0}^{|E|} e_i
 
 where $Z$ is a normalization constant.
 
-%  We then define a decision function $\delta$ based on $s$.  This is intended to indicate whether the provided human assistance is qualitatively above or below that person's useful cognitive threshold $\theta$:
-
-%\[
-%\delta(i) = 
-%\begin{cases}
-%True, & \text{if } s\le \theta\\
-%False, & Otherwise\\
-%\end{cases}
-%\]
 
 By computing this value $s$, the robot can label its own data in order
 to train a supervised learning algorithm which will relate the success
@@ -562,7 +553,16 @@ reality, test subjects were asked during the experiment to rate their
 own cognitive stress levels at 12-second intervals using a Likert
 scale. The human operators who participated using Rviz were given a physiological activity monitor\footnote{https://www.zephyranywhere.com/products/bioharness-3} to attach to their chest to monitor their heart rate, breathing rate, posture, ECG amplitudes and they were also being montitored by a human evaluator who rated and logged their cognitive stress level while they were playing the game. In other words human(coder) evaluator serves here as an subjective evaluator whreas the physiological metrics provides objective evaluation. Physiological metrics as objective evaluation along with subjective evaluation by the coder has been used and recommended in several works on human psycology\cite{Brookings1996361, Roscoe1992259}. We have found posture of human operator most likely correlates with subjective correlation with the code evaluation. One possible reason behind this is that posture is one of the visible observation that the coder can have while evaluating the operator. The coder rated stress level high when the operator tends to lean toward the screen of the computer when he or lean back on the chair. Other physiological metrics does not highly correlates with coder evaluation of stress level.
 
-The coin game also had a autonomous assistant configuration where the robot starts to navigate the maze autonomously not knowing where the coin is. Robot can pick the coin if crossed over it.The autonomous mood was activated by the robot if it found the human operator to be untrustworthy; the stress level is higher than a threshold. The threshold that we have set for our experiment was 55\% based on the data that we have collected from the non autonomous or manual mood. If the ignorance time which is the duration while no commands were given to that particular robot was higher than a threshold the robot switched to autonomous mood as well. In autonomous mood robot assumes that the coin can show up anywhere in the maze thus moves towards the optimum way point from where it the expected distance from a coin is minimum. 
+The coin game also had a autonomous assistant configuration where the robot starts to navigate the maze autonomously not knowing where the coin is. Robot can pick the coin if crossed over it.The autonomous mood was activated by the robot if it found the human operator to be untrustworthy; the stress level is higher than a threshold. The threshold that we have set for our experiment was 55\% based on the data that we have collected from the non autonomous or manual mood. If the ignorance time which is the duration while no commands were given to that particular robot was higher than a threshold the robot switched to autonomous mood as well. In autonomous mood robot assumes that the coin can show up anywhere in the maze thus moves towards the optimum way point from where it the expected distance from a coin is minimum. In other wors, we then define a decision function $\delta$ based on $\tilde{s}$.  This is intended to indicate whether the provided human assistance is qualitatively above or below that person's useful cognitive threshold $\theta$:
+
+\[
+\delta(i) = 
+\begin{cases}
+Autonomous, & \text{if } \tilde{s}(H)\le \theta\\
+Manual, & Otherwise\\
+\end{cases}
+\]
+ 
 %We have set two scenarios in this experiment. The first scenario, is the single human operator one or more robots team. In this scenario only one human operator was allowed to assist the human-robot team. We have set a timer for the human operator as 2 minutes and also set maximum 5 coin collection limit. Either condition satisfies the end of the game. Every time the robot collects a coin the timer is shortened by 12 seconds to put more cognitive stress on human operator. In the second scenario, multiple one or more robots were teamed up with two human operators. The initial timer was set to 1 minute and a maximum of ten coins were allowed to collect. Either condition satisfied he end of the game.
 
 \subsection{Coin Game Results}
@@ -586,17 +586,6 @@ user stress.
 \end{figure}
 
 Most important contribution of our model can has been demonstrated from the perspective of task success. The task success of the coin game is measured in term of number of coins collected withing given time. Our experiment shows that by switching to autonomous mood on detection of high stress level of human operator can significantly improve the task success Tab.\ref{tab:task_success}. Table \ref{tab:task_success} shows that dealing with more number of robots requires high cognitive labor for the human operator causing less winning rate and more time requirement. However, when we provide autonomous assistance on detection of high stress level using our learned model which was learned from another task, it improves overall task success.In the context of this paper, it also supports the original hypothesis: robots can are able to reliably assess the cognitive strain their human partners are under, even in contexts where the actual tasks they are being asked to perform are opaque to the robot.
-
-\begin{figure}
-\centering
-\includegraphics[width=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto.eps}
-<<<<<<< HEAD
-\caption{Test}
-=======
-\caption{"Test"}
->>>>>>> 9419146d8904267bda7d5df3f00e9780bbcea41b
-\label{fig:BoxWiskersTimeComp}
-\end{figure}
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
