Mahi fixed citation problem in 5.1 sec

--- a/Paper/HRI-17.tex
+++ b/Paper/HRI-17.tex
@@ -577,7 +577,7 @@ The benefits of this can be seen in Fig~\ref{fig:BoxWiskersTimeComp}. Here we sh
 with the autonomous fall-back enabled and are shown in green. In both cases,
 operating the robots in autonomous mode decreased the maximum runtime and yielded far more consistent completion times than running in manual only mode. Moreover, two robots operating in autonomous mode yielded completion times nearly 10\% faster then manual.
 
-It is critical for interpreting the information in \ref{fig:final-results} to note that while the robot's cognitive load evaluation and the scoring technique for quantifying
+It is critical for interpreting the information in Fig. \ref{fig:coder_eval_1_2} or \ref{fig:pred_phy} to note that while the robot's cognitive load evaluation and the scoring technique for quantifying
 self-reported user stress both produce a result between zero and one
 \textit{their magnitudes are not directly comparable}.Whenever cognitive stress occurs or changes, the robot is able to recognize this increase for most cases in the
 tested scenarios, and the robot's evaluation agrees with self-reported
