--- a/Paper/HRI-17-LBR.tex
+++ b/Paper/HRI-17-LBR.tex
@@ -77,7 +77,7 @@ an analogue to $f$ or $s$ in this new task.  However, it can still measure the c
 its learned model $g$.  We show that computing $\hat{s}=g(H)$ in this new environment allows the robot to estimate not
 the task success, but the cognitive load on its human partner and an estimate of the quality of the human's direction.
 \subsection{Experimental design} Our experiments consisted two games, namely, the Maze and the Coin. Effectively
-navigating a maze game has been demonstrated in literature \cite{crick2011human}. In the Mage game, the robot collected
+navigating a Maze game has been demonstrated in literature \cite{crick2011human}. In the Mage game, the robot collected
 the data needed to build a model $g$ for evaluating the trustworthiness of user input $H$. In the subsequent Coin Game,
 the robot is placed in a different scenario, one in which it had no access to success measures or even rules; beyond the
 fact that it was moving in a similar environment to the Maze Game. Even so, with no independent means of measuring task
@@ -125,7 +125,7 @@ contexts where the actual tasks they are being asked to perform are opaque to th
 
 \begin{figure}
 \centering
-\includegraphics[width=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto.eps}
+\includegraphics[width=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto2.eps}
 \caption{"Comparison of task completion time for task involving one and two robots operating in both manual (blue) and autonomous (green) modes."}
 \label{fig:BoxWiskersTimeComp}
 \end{figure}
@@ -138,8 +138,8 @@ contexts where the actual tasks they are being asked to perform are opaque to th
 \toprule
 Game Mode & \multicolumn{2}{c|}{Manual} & \multicolumn{2}{c|}{\begin{tabular}[c]{@{}c@{}}Autonomous \\ Assistance on high\\ Stress level\end{tabular}} \\ \midrule
 \begin{tabular}[c]{@{}c@{}}Number of\\ Robots\\ Participated\end{tabular}               & one     & two  & one  & two  \\ \midrule
-\begin{tabular}[c]{@{}c@{}}Number of Failure/\\ Total Number\\ of Game Played\end{tabular} & 2/12 & 5/15 & 0/10 & 1/10 \\ \midrule
-\begin{tabular}[c]{@{}c@{}}Average time\\ per game\\ (in sec.)\end{tabular}                & 205  & 230  & 170  & 233  \\ \bottomrule
+\begin{tabular}[c]{@{}c@{}}Number of Failure/\\ Total Number\\ of Game Played\end{tabular} & 3/7 & 3/7 & 0/10 & 1/15 \\ \midrule
+\begin{tabular}[c]{@{}c@{}}Task Success Score\\ per game\end{tabular}                & 318  & 355  & 170  & 233  \\ \bottomrule
 \end{tabular}
 \end{table}
 
@@ -158,9 +158,6 @@ should be making similar determinations about us.In the future, we plan to exten
 heterogeneous teams of humans and robots performing real-world tasks.
 
 \section{Acknowledgments}
-Support for this work was provided by a National Science Foundation
-RII Track-2 FEC award (Unmanned Aircraft System for Atmospheric
-Physics).
 
 %We would like to thank Robotic Cognition Laboratory of Computer Science Department of Oklahoma State University for facilitating this project. We would also like to thank all the people who participated in the project as human operator voluntarily.
 
