--- a/Paper/HRI-17-LBR.tex
+++ b/Paper/HRI-17-LBR.tex
@@ -126,29 +126,25 @@ contexts where the actual tasks they are being asked to perform are opaque to th
 \begin{figure}
 \centering
 \includegraphics[width=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto2.eps}
-\caption{"Comparison of task completion time for task involving one and two robots operating in both manual (blue) and autonomous (green) modes."}
+\caption{Comparison of task task success for task involving one and two robots operating in both manual and autonomous modes. Task success has been quantified as task completion time with additional penalty for failure to complete the task (loosing the Coin game).}
 \label{fig:BoxWiskersTimeComp}
 \end{figure}
 
-\begin{table}[]
-\centering
-\caption{Task success comparisons between autonomous assistance mood and manual mood. Autonomous assistance was activated on detection of high stress level predicted by our model.}
-\label{tab:task_success}
-\begin{tabular}{@{}|c|c|c|c|c|@{}}
-\toprule
-Game Mode & \multicolumn{2}{c|}{Manual} & \multicolumn{2}{c|}{\begin{tabular}[c]{@{}c@{}}Autonomous \\ Assistance on high\\ Stress level\end{tabular}} \\ \midrule
-\begin{tabular}[c]{@{}c@{}}Number of\\ Robots\\ Participated\end{tabular}               & one     & two  & one  & two  \\ \midrule
-\begin{tabular}[c]{@{}c@{}}Number of Failure/\\ Total Number\\ of Game Played\end{tabular} & 3/7 & 3/7 & 0/10 & 1/15 \\ \midrule
-\begin{tabular}[c]{@{}c@{}}Task Success Score\\ per game\end{tabular}                & 318  & 355  & 170  & 233  \\ \bottomrule
-\end{tabular}
-\end{table}
+\begin{table}[] \centering \caption{Task success comparisons between autonomous assistance mood and manual mood.
+Autonomous assistance was activated on detection of high stress level predicted by our model.} \label{tab:task_success}
+\begin{tabular}{@{}|c|c|c|c|c|@{}} \toprule Game Mode & \multicolumn{2}{c|}{Manual} &
+\multicolumn{2}{c|}{\begin{tabular}[c]{@{}c@{}}Autonomous \\ Assistance on high\\ Stress level\end{tabular}} \\ \midrule
+\begin{tabular}[c]{@{}c@{}}Number of\\ Robots\\ Participated\end{tabular} & one     & two  & one  & two  \\ \midrule
+\begin{tabular}[c]{@{}c@{}}Number of Failure/\\ Total Number\\ of Game Played\end{tabular} & 3/7 & 3/7 & 0/10 & 1/10 \\
+\midrule \begin{tabular}[c]{@{}c@{}}Task Success Score\\ per game\end{tabular}                & 318  & 355  & 170  &
+258.2   \\ \bottomrule \end{tabular} \end{table}
 
-\begin{figure}  
-\centering
-\includegraphics[width=.5\textwidth]{coder_eval_1_2.eps}
-\caption{Cognitive load of human operators in Coin Game experiments with differing numbers of robots and steadily increasing task complexity. The robots' predictions fairly correlates with the coder evaluation of cognitive load estimate.}
-\label{fig:coder_eval_1_2}
-\end{figure}
+% \begin{figure}
+% \centering
+% \includegraphics[width=.5\textwidth]{coder_eval_1_2.eps}
+% \caption{Cognitive load of human operators in Coin Game experiments with differing numbers of robots and steadily increasing task complexity. The robots' predictions fairly correlates with the coder evaluation of cognitive load estimate.}
+% \label{fig:coder_eval_1_2}
+% \end{figure}
 
 
 \section{Conclusions}
