--- a/Paper/HRI-17-LBR.tex
+++ b/Paper/HRI-17-LBR.tex
@@ -139,12 +139,12 @@ Autonomous assistance was activated on detection of high stress level predicted 
 \midrule \begin{tabular}[c]{@{}c@{}}Task Success Score\\ per game\end{tabular}                & 318  & 355  & 170  &
 258.2   \\ \bottomrule \end{tabular} \end{table}
 
-% \begin{figure}
-% \centering
-% \includegraphics[width=.5\textwidth]{coder_eval_1_2.eps}
-% \caption{Cognitive load of human operators in Coin Game experiments with differing numbers of robots and steadily increasing task complexity. The robots' predictions fairly correlates with the coder evaluation of cognitive load estimate.}
-% \label{fig:coder_eval_1_2}
-% \end{figure}
+\begin{figure}
+\centering
+\includegraphics[width=.5\textwidth]{coder_eval_1_2.eps}
+\caption{Cognitive load of human operators in Coin Game experiments with differing numbers of robots and steadily increasing task complexity. The robots' predictions fairly correlates with the coder evaluation of cognitive load estimate.}
+\label{fig:coder_eval_1_2}
+\end{figure}
 
 
 \section{Conclusions}
