Fixed Figure 2 caption.

--- a/Paper/HRI-17-LBR.tex
+++ b/Paper/HRI-17-LBR.tex
@@ -184,9 +184,7 @@ success.  The coin game requires the operator to navigate the maze collecting co
 \begin{figure}
 \centering
 \includegraphics[width=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto2.eps}
-\caption{Comparison of task task success score for task involving one
-  and two robots operating in both manual and autonomous assistance
-  modes.}
+\caption{Coin game task penalties in manual vs autonomous assistance modes across 34 test subjects.}
 \label{fig:BoxWiskersTimeComp}
 \end{figure}
 
