--- a/Paper/HRI-17-LBR.tex
+++ b/Paper/HRI-17-LBR.tex
@@ -174,7 +174,7 @@ predict.
 \begin{figure}  
 \centering
 \includegraphics[width=.5\textwidth]{prediction_vs_b_p_2.eps}
-\caption{Robot's estimated cognitive stress level vs. physiological metric}
+\caption{Robot's estimated cognitive stress level vs. physiological metric shows modes correlation between predicted cognitive load estimate.}
 \label{fig:pred_phy}
 \end{figure}
 
